--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
         <h1>Welcome to My Github</h1>
-        <h3><a href="https://hardcorek3v.github.io/SiTE/">HTTPS://HARDCOREK3V.GiTHUB.iO/SiTE/</a></h3>
+        <h3><a href="https://thehardcorek3v.github.io/SiTE/">TheHardcoreK3V</a></h3>
     </main>
     <script src="index.js"></script>
   </body>
