--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     </style>
   </head>
   <body>
+    <h1>TheHardcoreK3V</h1>
     <img src="K3V.jpg" alt="DJ Photo" />
-    <p>I'm a 42 year old DJ from the sunny Isle of Wight, UK, specialising in 1996 to 2006 Happy/Hardcore.</p>
+    <p>I'm a 42 year old DJ from the sunny Isle of Wight, UK, <br /> specialising in 1996 to 2006 Happy/Hardcore.</p>
   </body>
 </html>
