--- a/index.html
+++ b/index.html
@@ -7,36 +7,7 @@
     <title>TheHardcoreK3V</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-        background-color: #0d1117; /* GitHub dark default background */
-        color: #c9d1d9; /* GitHub dark default text */
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        text-align: center;
-      }
-      
-      img {
-        width: 300px;
-        height: 300px;
-        object-fit: cover;
-        border-radius: 50%;
-        border: 3px solid #30363d; /* GitHub border color */
-        margin-bottom: 20px;
-      }
-      
-      p {
-        max-width: 600px;
-        line-height: 1.5;
-        font-size: 1.1rem;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>TheHardcoreK3V</h1>
